# cim

./: .gdbinit  .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  ideas.txt  todo.txt
.cargo/: config.toml
.github/workflows/: build.yml
art/adjacencies/: 1.aseprite  2.aseprite  3.aseprite  4.aseprite  5.aseprite  6.aseprite  7.aseprite  8.aseprite
art/cover/: v1.aseprite
art/flag/: flag.aseprite
art/lines/: line.aseprite  nexus.aseprite
art/mine/: .gitattributes  v1.ase  v2.ase
art/splash/: splash.aseprite
assets/shaders/: custom_material.wgsl  grid.wgsl  terrain.wgsl
assets/tuning/: board_vis.ron
base/: Cargo.toml
base/src/: array2.rs  debug.rs  extents.rs  lib.rs  tuning.rs
bevy/: Cargo.toml
bevy/src/: main.rs
bevyx/: Cargo.toml
bevyx/src/: helper.rs  lib.rs  ron.rs
crates/assets/: Cargo.toml
crates/assets/src/: main.rs
crates/base/: Cargo.toml
crates/base/src/: array2.rs  assets.rs  const_default.rs  extents.rs  lib.rs  perlin.rs  point.rs  random.rs  ronx.rs  tuning.rs
crates/bevyx/: Cargo.toml
crates/sim/: Cargo.toml
crates/sim/src/: first_guess.rs  grid.rs  grid_gen.rs  lib.rs  logic.rs  mines.rs  reveal.rs  win_loss.rs
crates/sup/: Cargo.toml
crates/sup/src/: schedule.rs
crates/sweeper/: Cargo.toml
crates/sweeper/src/: app_state.rs  input.rs  interactor.rs  layers.rs  main.rs  screens.rs
crates/sweeper/src/app_state/: frontend.rs  gameplay.rs  splash.rs
crates/sweeper/src/screens/: custom.rs  custom_logic.rs  eog.rs  home.rs
crates/vis/: Cargo.toml
crates/vis/src/: board_vis_tuning.rs  grid_entities.rs  grid_lines.rs  layers.rs  lib.rs  terrain_vis.rs
sim/: Cargo.toml
sim/src/: grid.rs  lib.rs  logic.rs  reveal.rs  win_loss.rs
src/: app_state.rs  array2.rs  debug.rs  entity.rs  extents.rs  game_state.rs  input.rs  interactor.rs  layers.rs  main.rs  ogl.rs  pipeline.rs  renderer.rs  ron.rs  screens.rs  ui.rs
src/app_state/: frontend.rs  gameplay.rs  splash.rs
src/screens/: home.rs  hud.rs  splash.rs
src/ui/: hud_screen.rs  splash_screen.rs
sup/: Cargo.toml
sup/src/: lib.rs
vis/: Cargo.toml
vis/src/: board_vis_tuning.rs  grid_vis.rs  layers.rs  lib.rs  terrain_grid.rs  terrain_vis.rs
