[package]
name = "cim"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
	"crates/base",
	"crates/bevyx",
	"crates/sim",
	"crates/sup",
	"crates/vis",
	"external/lunex",
]

[workspace.dependencies]
arrayvec = "0.7.6"
bevy = { version = "0.16.0", features = ["default", "bevy_dev_tools"] }
bevy_egui = "0.34.0"
bitflags = "2.6.0"
bytemuck = "1.21.0"
glam = "0.29.2"
num-traits = "0.2.19"
ron = "0.8.1"
serde = "1.0.215"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0.6"

# Enable optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { workspace = true }
bevy_egui = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
glam = { workspace = true }
strum = { workspace = true }

base = { path = "crates/base" }
bevyx = { path = "crates/bevyx" }
sim = { path = "crates/sim" }
vis = { path = "crates/vis" }
sup = { path = "crates/sup" }
lunex = { path = "external/lunex" }
