[workspace]
resolver = "2"
members = [
	"crates/sweeper",
	"crates/base",
	"crates/bevyx",
	"crates/sim",
	"crates/sup",
	"crates/vis",
	"external/lunex",
]
default-members = [
	"crates/sweeper"
]

[workspace.package]
authors = ["Scott Checko"]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
arrayvec = "0.7.6"
bevy = { version = "0.16.1", features = ["default", "bevy_dev_tools", "bevy_render", "bevy_ui", "bevy_picking", "bevy_ui_debug"] }
bevy_egui = "0.34.0"
bitflags = "2.6.0"
bytemuck = "1.21.0"
glam = "0.29.2"
num-traits = "0.2.19"
ron = "0.8.1"
serde = "1.0.215"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0.6"
base = { path = "crates/base" }
bevyx = { path = "crates/bevyx" }
sim = { path = "crates/sim" }
vis = { path = "crates/vis" }
sup = { path = "crates/sup" }
lunex = { path = "external/lunex" }

[profile.release]
debug = true
strip = false

# Enable optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3
debug = true
strip = false

