[package]
name = "vis"
version = "0.1.0"
edition = "2021"

[dependencies]
bevyx = { path = "../bevyx" }
sim = { path = "../sim" }
base = { path = "../base" }

bevy = { workspace = true }
bitflags = { workspace = true }
bytemuck = { workspace = true }
serde = { workspace = true }
num-traits = { workspace = true }

