[package]
name = "assets"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
ron = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
glam = { workspace = true }
strum = { workspace = true }

base = { workspace = true }
bevyx = { workspace = true }
bevy = { workspace = true }
