[package]
name = "base"
version = { workspace = true }
edition = { workspace = true }

# ******************************************************
# DO NOT ADD BEVY AS A DEPENDENCY HERE
# ******************************************************

[dependencies]
arrayvec = { workspace = true }
bitflags = { workspace = true }
serde = { workspace = true }
ron = { workspace = true }
glam = { workspace = true }

