[package]
name = "sweeper"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
bevy = { workspace = true }
bevy_egui = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
glam = { workspace = true }
strum = { workspace = true }

base = { workspace = true }
bevyx = { workspace = true }
sim = { workspace = true }
vis = { workspace = true }
sup = { workspace = true }
lunex = { workspace = true }

