[package]
name = "vis"
description = "visuals"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
bevyx = { path = "../bevyx" }
sim = { path = "../sim" }
base = { path = "../base" }
sup = { path = "../sup" }

bevy = { workspace = true }
bitflags = { workspace = true }
bytemuck = { workspace = true }
serde = { workspace = true }
num-traits = { workspace = true }

